<resources>
    <string name="app_name">AtmSimulator</string>

    <string name="login_activity_editTextUsername_hint">Username</string>
    <string name="login_activity_editTextNIP_hint">NIP</string>
    <string name="login_activity_buttonSignIn">SIGN IN</string>
    <string name="login_activity_textview_fetchingData_error">There was an error while login.\\nPlease contact our support team if the problem persists.</string>
    <string name="login_activity_textview_emptyUsername_error">Username is empty.\nEnter a username.</string>
    <string name="login_activity_textview_emptyNIP_error">NIP is empty.\nEnter a NIP.</string>
    <string name="login_activity_textview_invalidLogin_error">Connection failed.\nThe username or password entered is wrong.</string>
    <string name="login_activity_textview_invalidLogin_errorEnding">try left.</string>
    <string name="login_activity_textview_loginAttempts_error">Too many failed connection attempt.\nTry again in</string>
    <string name="login_activity_textview_loginAttempts_errorEnding">seconds.</string>

    <string name="atm_activity_editTextInput_hint">Amount</string>
    <string name="main_activity_title">Android ATM</string>
    <string name="atm_activity_title">Welcome android ATM</string>
    <string name="atm_activity_button_logout">LOGOUT</string>
    <string name="atm_activity_button_0">0</string>
    <string name="atm_activity_button_1">1</string>
    <string name="atm_activity_button_2">2</string>
    <string name="atm_activity_button_3">3</string>
    <string name="atm_activity_button_4">4</string>
    <string name="atm_activity_button_5">5</string>
    <string name="atm_activity_button_6">6</string>
    <string name="atm_activity_button_7">7</string>
    <string name="atm_activity_button_8">8</string>
    <string name="atm_activity_button_9">9</string>
    <string name="atm_activity_button_dot">.</string>
    <string name="atm_activity_button_clear">c</string>
    <string name="atm_activity_radioButton_deposit">Deposit</string>
    <string name="atm_activity_radioButton_withdraw">Withdraw</string>
    <string name="atm_activity_radioButton_transfer">Transfer</string>
    <string name="atm_activity_radioButton_check">Check</string>
    <string name="atm_activity_radioButton_saving">Saving</string>
    <string name="atm_activity_button_accountSummary">Accounts summary</string>
    <string name="atm_activity_button_submit">SUBMIT</string>
    <string name="atm_activity_textView_check">Check account balance:</string>
    <string name="atm_activity_textView_saving">Saving account balance:</string>
    <string name="atm_activity_textView_transaction_deposit_prefix">Transaction complete.\nDeposited </string>
    <string name="atm_activity_textView_transaction_withdraw"> Transaction complete.\nWithdrew</string>
    <string name="atm_activity_textView_transaction_deposit_checkAccount_suffix">" to your check account ."</string>
    <string name="atm_activity_textView_transaction_deposit_savingAccount_suffix">" to your saving account. "</string>
    <string name="atm_activity_textView_transaction_withdraw_checkAccount_suffix">" from your check account ."</string>
    <string name="atm_activity_textView_transaction_withdraw_savingAccount_suffix">" from your saving account. "</string>
    <string name="atm_activity_textView_emptyField">" Enter an amount to deposit or withdraw."</string>
    <string name="atm_activity_textView_insufficient_funds">Transaction failed.\nInsufficient funds.</string>
    <string name="atm_activity_textView_Transfer">Transaction completed.\nTransferred</string>
    <string name="atm_activity_textView_Transfer_checkToSaving">" from your Check account to your Saving account."</string>
    <string name="atm_activity_textView_Transfer_savingToCheck">" from your saving account to your check account. "</string>
    <string name="atm_activity_textView_maximumTransfer">Transaction failed.\nMaximum transfer amount is 100 000$.</string>
    <string name="atm_activity_textView_errorAmount1000">Transaction failed.\nMaximum withdraw amount of 1000$.</string>
    <string name="atm_activity_textView_error_amount_modulo10">Transaction failed.\nThe amount must be divisible by 10.</string>
    <string name="atm_activity_textView_errorAmountZero">Transaction failed.\nThe amount must be greater than 0.</string>

    <string name="admin_activity_interestComplete">Interest payments completed with success.</string>

    <string name="list_layout_title_client">Client list</string>
    <string name="list_layout_title_account_check">Check accounts</string>
    <string name="list_layout_title_account_saving">Saving accounts</string>
    <string name="list_layout_item1_client_prefix">Client last name:</string>
    <string name="list_layout_item2_client_prefix">Client first name:</string>
    <string name="list_layout_item1_admin_prefix">Admin last name:</string>
    <string name="list_layout_item2_admin_prefix">Admin first name:</string>
    <string name="list_layout_item1_account_prefix">Account number:</string>
    <string name="list_layout_item2_account_prefix">Account balance:</string>

    <string name="logout_warning_message">Do you want to log out?</string>
    <string name="logout_warning_button_yes">Yes</string>
    <string name="logout_warning_button_no">No</string>

</resources>